# PDFValidator

./: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
LLM/: chain.py  environment.py  llm_loader.py  llms_summarize.py
notebooks/: EDA.ipynb  LLMs.ipynb
preprocessing/: data_ingestion.py  data_preprocessing.py
src/: constants.py  llmModuleConnectors.py  main.py  pdf_service.py  testMockValues.py  test_main.py
utils/: logger.py
